@startuml Modèles Laravel
!theme materia-outline
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0
skinparam classFontStyle bold
skinparam packageFontStyle bold
skinparam packageFontSize 14
skinparam classFontSize 12
skinparam classBackgroundColor #F8F9FA
skinparam packageBackgroundColor #E3F2FD
skinparam packageBorderColor #1976D2
skinparam minClassWidth 150
skinparam classMinWidth 150
skinparam packagePadding 20
skinparam classPadding 10

' Classe externe Utilisateur
class Utilisateur {
    +id : entier
    +nom : chaîne
    +email : chaîne
}

package "ModuleApprenant" #LightBlue {
    class Promotion {
        +id : entier
        +nom : chaîne
        +description : chaîne
        +date_début : date
        +date_fin : date
        +est_active : booléen
    }
    
    class Groupe {
        +id : entier
        +nom : chaîne
        +description : chaîne
    }
    
    class Apprenant {
        +id : entier
    }
}

package "ModuleEntretienIndividuel" #LightGreen {
    class Responsable {
        +id : entier
    }
    
    class FormulaireCheckin {
        +id : entier
        +titre : chaîne
        +description : chaîne
        +date_début : datetime
        +date_fin : datetime
        +est_actif : booléen
    }
    
    class Question {
        +id : entier
        +texte_question : chaîne
        +type_question : chaîne
    }
    
    class CheckinEtudiant {
        +id : entier
        +créé_le : datetime
    }
    
    class RéponseCheckinEtudiant {
        +id : entier
        +texte_réponse : chaîne
    }
    
    class AnalyseIA {
        +id : entier
        +texte_analyse : chaîne
        +type : chaîne
    }
}

' Relations sans flèches - juste des lignes avec cardinalités
Promotion "1" -- "*" Groupe
Groupe "1" -- "*" Apprenant
Utilisateur "1" -- "*" Apprenant
Utilisateur "1" -- "*" Responsable
Promotion "1" -- "*" FormulaireCheckin
FormulaireCheckin "1" -- "*" Question
Apprenant "1" -- "*" CheckinEtudiant
FormulaireCheckin "1" -- "*" CheckinEtudiant
CheckinEtudiant "1" -- "*" RéponseCheckinEtudiant
CheckinEtudiant "1" -- "*" AnalyseIA
Question "1" -- "*" RéponseCheckinEtudiant

@enduml